--- a/index.html
+++ b/index.html
@@ -131,21 +131,43 @@
       </section>
 
       <section class="team">
-        <h2 class="team__title">Наша команда</h2>
-        <!-- Slider3 container -->
-        <div class="swiper-container swiper-container--3">
-          <!-- Additional required wrapper -->
-          <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide swiper-slide--member1">Полина Пикус</div>
-            <div class="swiper-slide swiper-slide--member2">Дмитрий Пикус</div>
-            <div class="swiper-slide swiper-slide--member3">Елена Микитюк</div>
-            <div class="swiper-slide swiper-slide--member4">Саша Коцюба</div>
-            <div class="swiper-slide swiper-slide--member5">Николай Вершинин</div>
+        <div class="team__container">
+          <h2 class="team__title">Наша команда</h2>
+          <!-- Slider3 container -->
+          <div class="swiper-container swiper-container--3">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide swiper-slide--member">
+                <img src="images/member1.jpg" alt="" class="team__photo" width="263" height="263">
+                <span class="team__name">Полина Пикус</span>
+                <span class="team__post">Директор</span>
+              </div>
+              <div class="swiper-slide swiper-slide--member">
+                <img src="images/member2.jpg" alt="" class="team__photo" width="263" height="263">
+                <span class="team__name">Дмитрий Пикус</span>
+                <span class="team__post">Секретарь</span>
+              </div>
+              <div class="swiper-slide swiper-slide--member">
+                <img src="images/member3.jpg" alt="" class="team__photo" width="263" height="263">
+                <span class="team__name">Елена Микитюк</span>
+                <span class="team__post">Web-дизайнер</span>
+              </div>
+              <div class="swiper-slide swiper-slide--member">
+                <img src="images/member2.jpg" alt="" class="team__photo" width="263" height="263">
+                <span class="team__name">Дмитрий Пикус 2</span>
+                <span class="team__post">Водитель</span>
+              </div>
+              <div class="swiper-slide swiper-slide--member">
+                <img src="images/member2.jpg" alt="" class="team__photo" width="263" height="263">
+                <span class="team__name">Дмитрий Пикус 3</span>
+                <span class="team__post">Пресс-секретарь</span>
+              </div>
+            </div>
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev swiper-button-prev--3"></div>
+            <div class="swiper-button-next swiper-button-next--3"></div>
           </div>
-          <!-- If we need navigation buttons -->
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
         </div>
       </section>
 
@@ -153,18 +175,22 @@
         <h2 class="visually-hidden">Статистика</h2>
         <ul class="stat__list">
           <li class="stat__item">
+            <img src="images/community.png" alt="" class="stat__icon" width="95" height="95">
             <span class="stat__value">3890</span>
             <span class="stat__description">людей, которые продвигают наши идеи</span>
           </li>
           <li class="stat__item">
+            <img src="images/community.png" alt="" class="stat__icon" width="95" height="95">
             <span class="stat__value">285</span>
             <span class="stat__description">подсчитаных карт блюд</span>
           </li>
           <li class="stat__item">
+            <img src="images/community.png" alt="" class="stat__icon" width="95" height="95">
             <span class="stat__value">28</span>
             <span class="stat__description">заведений, желающих с нами сотрудничать</span>
           </li>
           <li class="stat__item">
+            <img src="images/community.png" alt="" class="stat__icon" width="95" height="95">
             <span class="stat__value">18</span>
             <span class="stat__description">заведений, которые уже с нами</span>
           </li>
@@ -179,49 +205,75 @@
           <div class="swiper-wrapper">
             <!-- Slides -->
             <div class="swiper-slide swiper-slide--restaurant">
-              <h3 class="result__name">Meat restaurant</h3>
-              <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-              <a href="" class="result__link">Перейти на сайт</a>
+              <img src="images/result1.jpg" alt="" class="result__photo" width="585" height="467">
+              <div class="result__description">
+                <h3 class="result__name">Vegetable cafe</h3>
+                <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                <a href="" class="result__link">Перейти на сайт</a>
+              </div>
+            </div>
+            <div class="swiper-slide swiper-slide--restaurant">
+              <img src="images/result1.jpg" alt="" class="result__photo" width="585" height="467">
+              <div class="result__description">
+                <h3 class="result__name">Meat restaurant</h3>
+                <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                <a href="" class="result__link">Перейти на сайт</a>
+              </div>
+            </div>
+            <div class="swiper-slide swiper-slide--restaurant">
+              <img src="images/result1.jpg" alt="" class="result__photo" width="585" height="467">
+              <div class="result__description">
+                <h3 class="result__name">Pancake</h3>
+                <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                <a href="" class="result__link">Перейти на сайт</a>
+              </div>
+            </div>
+            <div class="swiper-slide swiper-slide--restaurant">
+              <img src="images/result1.jpg" alt="" class="result__photo" width="585" height="467">
+              <div class="result__description">
+                <h3 class="result__name">Fast food</h3>
+                <p class="result__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+                <a href="" class="result__link">Перейти на сайт</a>
+              </div>
             </div>
           </div>
           <!-- If we need navigation buttons -->
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev swiper-button-prev--4"></div>
+          <div class="swiper-button-next swiper-button-next--4"></div>
         </div>
       </section>
 
-      <section class="letter">
-        <h2 class="letter__title">Свяжитесь с нами</h2>
-        <form class="letter__form">
-          <input class="letter__input" type="text" id="name" name="name" placeholder="ФИО" required>
-          <label for="name" class="letter__label">ФИО</label>
-          <input class="letter__input" type="email" id="email" name="email" placeholder="Email" required>
-          <label for="email" class="letter__label">Email</label>
-          <input class="letter__input" type="text" id="phone" placeholder="Телефон" name="phone">
-          <label for="phone" class="letter__label">Телефон</label>
-          <textarea class="letter__textarea" id="message" name="message" placeholder="Текст сообщения"></textarea>
-          <label for="message" class="letter__label">Текст сообщения</label>
-          <button type="submit" class="letter__btn">Отправить</button>
-        </form>
-      </section>
-
       <section class="contacts">
-        <p class="contacts__address">г. КИЕВ, УЛИЦА ХРЕЩАТИК, 1</p>
-        <p class="contacts__phone"><a href="tel:+38-(097)-88-88-888">
-<!--            <svg class="contacts__icon" width="30px" height="30" aria-label="Phone">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#phone"></use>
-            </svg> -->
-            +38-(097)-88-88-888</a></p>
-        <p class="contacts__email"><a  href="mailto:polinapicus@gmail.com.ua">
-<!--            <svg class="calltoaction__icon" width="30px" height="30" aria-label="Email">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#email"></use>
-            </svg> -->
-            polinapicus@gmail.com.ua</a></p>
-        <p class="contacts__social"><a href="">
-<!--            <svg class="contacts__icon" width="30px" height="40" aria-label="fb">
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#fb"></use>
-           </svg> -->
-           Наша страница в Facebook</a></p>
+        <div class="contacts__container">
+          <h2 class="contacts__title">Свяжитесь с нами</h2>
+          <form class="contacts__form form">
+            <input class="form__input" type="text" id="name" name="name" placeholder="ФИО" required>
+            <label for="name" class="form__label">ФИО</label>
+            <input class="form__input" type="email" id="email" name="email" placeholder="Email" required>
+            <label for="email" class="form__label">Email</label>
+            <input class="form__input form__input--phone" type="text" id="phone" placeholder="Телефон" name="phone">
+            <label for="phone" class="form__label">Телефон</label>
+            <textarea class="form__textarea" id="message" name="message" placeholder="Текст сообщения"></textarea>
+            <label for="message" class="form__label">Текст сообщения</label>
+            <button type="submit" class="form__btn">Отправить</button>
+          </form>
+          <p class="contacts__address">г. КИЕВ, УЛИЦА ХРЕЩАТИК, 1</p>
+          <p class="contacts__phone"><a href="tel:+38-(097)-88-88-888">
+  <!--            <svg class="contacts__icon" width="30px" height="30" aria-label="Phone">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#phone"></use>
+              </svg> -->
+              +38-(097)-88-88-888</a></p>
+          <p class="contacts__email"><a  href="mailto:polinapicus@gmail.com.ua">
+  <!--            <svg class="calltoaction__icon" width="30px" height="30" aria-label="Email">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#email"></use>
+              </svg> -->
+              polinapicus@gmail.com.ua</a></p>
+          <p class="contacts__social"><a href="">
+  <!--            <svg class="contacts__icon" width="30px" height="40" aria-label="fb">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#fb"></use>
+             </svg> -->
+             Наша страница в Facebook</a></p>
+        </div>
       </section>
     </main>
 
@@ -253,7 +305,7 @@
       });
       var swiper3 = new Swiper('.swiper-container--3', {
         slidesPerView: 3,
-        spaceBetween: 60,
+        spaceBetween: 30,
         slidesPerGroup: 1,
         loop: true,
         loopFillGroupWithBlank: true,
