--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <label for="email" class="form__label">Email</label>
             <input class="form__input form__input--phone" type="text" id="phone" placeholder="Телефон" name="phone">
             <label for="phone" class="form__label">Телефон</label>
-            <textarea class="form__textarea" id="message" name="message" placeholder="Текст сообщения"></textarea>
+            <textarea class="form__textarea" id="message" name="message" placeholder="Текст сообщения" rows="4"></textarea>
             <label for="message" class="form__label">Текст сообщения</label>
             <button type="submit" class="form__btn">Отправить</button>
           </form>
