--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         background-repeat: no-repeat;
         background-position:  50% 0;
         /* По умолчанию показывается мобильный макет */
-        background-image: url( "maket/landing-mobile-menu-open.jpg" );
+        background-image: url( "maket/landing-mobile.jpg" );
       }
       /* Десктоп */
       @media ( min-width: 1170px ) {
@@ -45,12 +45,7 @@
       <div class="header__top">
         <div class="header__panel">
           <div class="header__logo"></div>
-          <button class="header__toggle header__toggle--close" type="button">
-            <span class="visually-hidden">Переключатель навигации</span>
-            <span class="header__icon"></span>
-            <span class="header__icon"></span>
-            <span class="header__icon"></span>
-          </button>
+          <button class="header__toggle header__toggle--close" type="button"></button>
         </div>
         <nav class="header__menu">
           <ul class="menu">
@@ -123,31 +118,21 @@
         <div class="ideas__container">
           <h2 class="ideas__title">Идеи потребителей</h2>
           <div class="scroll-pane">
-            <h3 class="ideas__author">Марина Павлова</h3>
-            <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
-            <h3 class="ideas__author">Дмитрий</h3>
-            <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
-            <h3 class="ideas__author">Андрей Иванов</h3>
-            <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
-            <h3 class="ideas__author">Марина Павлова</h3>
-            <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
-            <h3 class="ideas__author">Дмитрий</h3>
-            <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
-            <h3 class="ideas__author">Андрей Иванов</h3>
-            <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
-            <h3 class="ideas__author">Марина Павлова</h3>
-            <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
-            <h3 class="ideas__author">Дмитрий</h3>
-            <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
-            <h3 class="ideas__author">Андрей Иванов</h3>
-            <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
-            <h3 class="ideas__author">Марина Павлова</h3>
-            <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
-            <h3 class="ideas__author">Дмитрий</h3>
-            <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
-            <h3 class="ideas__author">Андрей Иванов</h3>
-            <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
+            <div class="ideas__slide ideas__slide--desktop">
+              <h3 class="ideas__author">Марина Павлова</h3>
+              <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
+            </div>
+            <div class="ideas__slide ideas__slide--desktop">
+              <h3 class="ideas__author">Дмитрий</h3>
+              <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
+            </div>
+            <div class="ideas__slide ideas__slide--desktop">
+              <h3 class="ideas__author">Андрей Иванов</h3>
+              <p class="ideas__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in </p>
+            </div>
           </div>
+          <div class="ideas__btn ideas__btn--prev"></div>
+          <div class="ideas__btn ideas__btn--next"></div>
           <a href="" class="ideas__link">Написать нам</a>
         </div>
       </section>
@@ -449,11 +434,11 @@
     </div>  <!-- Scroll to top end-->
 
     <script src="js/swiper.min.js"></script>
-<!--    <script src="js/custom.js"></script> -->
     <script>
+    <!--Слайдер Партнеры -->
       var swiper1 = new Swiper('.swiper-container--1', {
-        slidesPerView: 4,
-        spaceBetween: 37,
+        slidesPerView: 'auto',
+        spaceBetween: 0,
         slidesPerGroup: 1,
         loop: true,
         loopFillGroupWithBlank: true,
@@ -462,9 +447,10 @@
           prevEl: '.swiper-button-prev',
         },
       });
+      <!--Слайдер Наша команда -->
       var swiper3 = new Swiper('.swiper-container--3', {
-        slidesPerView: 3,
-        spaceBetween: 30,
+        slidesPerView: 'auto',
+        spaceBetween: 0,
         slidesPerGroup: 1,
         loop: true,
         loopFillGroupWithBlank: true,
@@ -473,6 +459,7 @@
           prevEl: '.swiper-button-prev',
         },
       });
+      <!--Слайдер Результаты работы -->
       var swiper4 = new Swiper('.swiper-container--4', {
         navigation: {
           nextEl: '.swiper-button-next',
@@ -483,5 +470,6 @@
 	      $('.scroll-pane').jScrollPane();
       });
     </script>
+    <script src="js/custom.js"></script>
   </body>
 </html>
